# HessianforML

./: .gitignore  Thetacpp.txt  Untitled.ipynb  modularV2ridge.py
cpp/: CMakeLists.txt  hessWrapper.cpp  hessone.cpp  hessone.h  hessone.h.bck
heh+LINEAR_6-31g/: hamiltoniantheta0.npz  heh+tdHamerr.npz  heh+tdHamerrWF.npz  theta.txt
tdci/: modularV2ridge.py
tdci/h2LINEAR/: h2tdHamerr.npz  hamiltoniantheta0.npz
