project(HessCalc)
cmake_minimum_required(VERSION 3.10)
include(FindOpenMP)
if(OPENMP_FOUND)
  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 ${OpenMP_CXX_FLAGS}")
  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
  add_subdirectory(thirdparty/pybind11)
  include_directories(thirdparty/eigen)
  include_directories(thirdparty/xtensor/include)
  include_directories(thirdparty/xtensor-python/include)
  include_directories(thirdparty/xtl/include)
  include_directories(thirdparty/xsimd/include)
  pybind11_add_module(Hess hessWrapper.cpp hessone.h)
else(OPENMP_FOUND)
  message("ERROR: OpenMP could not be found.")
endif(OPENMP_FOUND)
